# SNAKE-GAME

./: pyproject.toml
snake_game/: food.py  main.py  scoreboard.py  snake.py
