[tool.poetry]
name = "snake-game"
version = "0.1.0"
description = ""
authors = ["Amna Rahman <amnarahman00@gmail.com>"]
readme = "README.md"
packages = [{include = "snake_game"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
